<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
  <item android:id="@+id/clear"
        android:title="@string/clear"
        android:orderInCategory="10"/>
  <item android:id="@+id/adaptingDemo_standard"
        android:title="@string/adaptingDemo_standardFragment_name"
        android:orderInCategory="100"
        app:showAsAction="never"/>
  <item android:id="@+id/adaptingDemo_improvement1"
        android:title="@string/adaptingDemo_improvement1Fragment_name"
        android:orderInCategory="101"
        app:showAsAction="never"/>
  <item android:id="@+id/adaptingDemo_improvement2"
        android:title="@string/adaptingDemo_improvement2Fragment_name"
        android:orderInCategory="102"
        app:showAsAction="never"/>
  <item android:id="@+id/dataBindingDemo_standard"
        android:title="@string/dataBindingDemo_standardFragment_name"
        android:orderInCategory="110"
        app:showAsAction="never"/>
  <item android:id="@+id/dataBindingDemo_improvement1"
        android:title="@string/dataBindingDemo_improvement1Fragment_name"
        android:orderInCategory="111"
        app:showAsAction="never"/>
  <item android:id="@+id/adapterFrameworkDemo_simple"
        android:title="@string/adapterFrameworkDemo_SimpleFragment_name"
        android:orderInCategory="120"
        app:showAsAction="never"/>
  <item android:id="@+id/adapterFrameworkDemo_adaptable"
        android:title="@string/adapterFrameworkDemo_AdaptableFragment_name"
        android:orderInCategory="120"
        app:showAsAction="never"/>
</menu>
